@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   </head>
   <body id="top">
+    <script src="/data/js/compatible.js"></script>
     <script src="/data/js/changes.js"></script>
     <script src="/data/js/append.js"></script>
     <script src="/data/js/input.js"></script>
