@@ -385,6 +385,7 @@
       </div>
     </details>
     <div id="top"></div>
+    <script src="/data/js/compatible.js"></script>
     <script src="/data/js/changes.js"></script>
     <script src="/data/js/append.js"></script>
     <script src="/data/js/input.js"></script>
